# get-student-data

./: Cargo.toml
src/: data.csv  lib.rs  main.rs  output.csv
